[package]
name = "vapor"
version = "0.1.0"
edition = "2021"

[dependencies]
# GTK4 bindings
gtk = { version = "0.9", package = "gtk4" }

# Libadwaita bindings renamed to adw for convenience
adw = { version = "0.7", package = "libadwaita" }

# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parser for Valve KeyValues/VDF format (used by .acf files)
keyvalues-serde = "0.2"
